# range_set

./: .appveyor.yml  .coveragerc  CHEATSHEET.rst  Makefile  README.rst  conset.py  pyproject.toml  range_set.py  setup.py
ci/: travis.sh
conset/: __init__.py
debian/: .gitignore  changelog  control  rules  watch
docs/: Makefile  make.bat
docs/source/: conf.py  history.rst  index.rst  main.rst
tests/: test_base.py
